# devotional-generator-system-a

./: .gitignore  README.md  constitution.md  index.md  iteration-log.md  prd.md  pyproject.toml  roadmap.md
data/excerpts/: seed-excerpts.json
data/quotes/: seed-quotes.json
outputs/reviews/: phase-013-architectural-freeze.md
phases/: 001-data-model-and-inputs.md  002-template-system.md  003-kdp-pdf-export.md  004-validation-review-and-scoring-harness.md
src/api/: export_gate.py  generation_pipeline.py  pdf_export.py
src/audit/: artifact_audit.py
src/generation/: generators.py  llm_exposition_generator.py  llm_prayer_generator.py  real_section_generator.py
src/grounding_store/: harness.py  id_policy.py  store.py
src/interfaces/: mock_rag.py  rag.py
src/llm/: interfaces.py
src/models/: artifacts.py  devotional.py  document.py  pipeline.py  registry.py  validation.py
src/prayer_trace_store/: id_policy.py  store.py
src/rag/: catalog.py  exposition.py  grounding.py
src/registry/: registry.py
src/rendering/: engine.py  front_matter.py  sections.py
src/scripture/: book_ids.py  retrieval.py
src/validation/: action_steps.py  be_still.py  doctrinal.py  exposition.py  modernization.py  orchestrator.py  prayer.py  rewrite_router.py
templates/: introduction_sunday.md  offer_page.md
tests/: test_document_schema.py  test_front_matter.py  test_interfaces.py  test_pdf_integration.py  test_registry.py  test_rendering.py  test_schemas.py  test_scripture_retrieval.py  test_section_renderers.py
ui/: package.json  pnpm-lock.yaml  tsconfig.json
(+40 files in other folders)
